fix text alignment on stadiumsnearme page

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -64,6 +64,7 @@ a {
     font-size: 45px;
     margin-left: 20px;
     max-width: 250px;
+    min-width: 250px;
 }
 
 .LogoFix {
